--- a/client/war/index.tmpl.htm
+++ b/client/war/index.tmpl.htm
@@ -14,7 +14,7 @@
 						Papers, please<br/>
 						<br/>
 						<center>
-							<img src="./google.png" width="16" height="16"/>
+							<img src="./google.png" id="authwith-google" width="16" height="16"/>
 						</center>
 					</td>
 				</tr>
