--- a/client/war/index.tmpl.htm
+++ b/client/war/index.tmpl.htm
@@ -15,6 +15,8 @@
 						<br/>
 						<center>
 							<img src="./google.png" id="authwith-google" width="16" height="16"/>
+							<br><br>
+							<input type="text" id="commentform" value="asd"><input type="button" id="commentsubmit" value="That's all I have to say">
 						</center>
 					</td>
 				</tr>
